@startuml Methodist.wsd

class User{
    -int id
    -int role
    -int isWork
    -QString surname
    -QString name
    -QString middlename
    -int id_specialization
    -QString phone
    -int worktime
    -int department
    -int id_group
    -QString login
    -QString password
}

class Lesson{
    -int id
    -int id_teacher
    -int typeofactivity
    -QString title
    -int id_group
    -int id_speciazation
    -int id_lecturehall
    -QString time
    -double payment
}

class  LoginWindow{
   QString login
   QString password
   Database db
   void checkUser()
}

class SettingsWindow{
    -Lesson lesson
    -bool Change
    -void addLessom()
}

class TimeWindow{
    void Timededuction()
    -User user
}

class AbstractUserWindow{
    +User getUser()
    #User user

}

class WindowNavigator{
    -Database db
    -AbstractWindowForRole WindowForRole
    -LoginWindow login
}

class Database {
    +Lesson GetLessonById()
    +User GetUserById()
    +User CheckLogin()
    +void RegisterUser()
    +void RefreshUserByID()
    +void AddSpecializacia()
    +void AddGroup()
    +void DelSpecializacia()
    +void DelGroup()
    +void AddLesson()
    +void RefreshLessonById()
    +int Time()
}

class MethodistWindow{
    -void fillProfile()
    -void configuringInterface()
    -Database db
    -SettingsWindow Settings
    -void viewLesson()


}

AbstractUserWindow <|-- MethodistWindow
MethodistWindow o-- Database
WindowNavigator --> AbstractUserWindow
WindowNavigator --> LoginWindow
MethodistWindow --> SettingsWindow
MethodistWindow --> TimeWindow
MethodistWindow --> User
MethodistWindow --> Lesson
LoginWindow o-- Database

@enduml